# avr_pcc_2023_interfaces

./: CMakeLists.txt  README.md  package.xml
msg/: ThermalFrame.msg
srv/: SetLedStrip.srv  SetServo.srv
